# deephaven-questdb

./: .gitignore  CLEANUP_OLD_TESTS.md  CODE_SIMPLIFICATION_COMPLETE.md  DEEPHAVEN_BUG_REPORT.md  END_TO_END_TEST_REPORT.md  FINAL_STATUS.md  FINAL_SUMMARY.md  LICENSE  MIGRATION_SUMMARY.md  Makefile  README.md  README_SETUP.md  REFACTORING_COMPLETE.md  SDK_MIGRATION_COMPLETE.md  UNIFICATION_FIX.md  UNIFICATION_SUCCESS.md  UPGRADE_SUMMARY.md  V0407_BUG_CONFIRMED.md  V0407_TEST_REPORT.md  docker-compose-base.yml  docker-compose-deephaven.yml  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  verify_orderbooks.sql
data/app.d/: config.app
data/layouts/: custom_layout.json
data/notebooks/: dh_questdb.py  test_pivot_tables.py
data_dh/app.d/: config.app  init_app.py
data_dh/layouts/: custom_layout.json
data_dh/notebooks/: dh_questdb.py  test.py
data_questdb/conf/: server.conf
dhquest/: 1_run_cryptofeed.py  callbacks.py  dhcallbacks.py  qdb.py
dhquest/scripts/: 1_run_cryptofeed.py
docker/cryptofeed/: COMPACT_ORDERBOOK_USAGE.md  Dockerfile  MATERIALIZED_VIEW.md  TTL_CONFIGURATION.md  WRITER_COMPARISON.md  requirements.txt  setup.py
docker/deephaven/: Dockerfile  patch_all_callbacks.py
docker_files/: Dockerfile.cryptofeed  Dockerfile.dh_server  Dockerfile.questdb  server.conf
dockerfiles/: Dockerfile.deephaven
docs/: CURRENT_STATUS.md  DEEPHAVEN_BUG_REPORT.md  README.md  orderbooks.md
docs/history/: README.md
docs/verification/: end-to-end-verification.md
validation/: check_trades.py  final_status.py  test_init_script.py  verify_data.py
(+52 files in other folders)
